--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
 
     <div class="flex flex-col min-h-screen p-4">
-        <div class="w-full max-w-md mx-auto flex-grow flex items-center">
+        <div class="w-full max-w-2xl mx-auto flex-grow flex items-center">
             <div class="w-full">
                 <!-- ======================= HOME SCREEN ======================= -->
                 <div id="home-screen">
@@ -27,48 +27,48 @@
                         <p class="text-md text-gray-500 dark:text-gray-400 mt-2">Your Fun English Journey Starts Here!</p>
                         <p class="text-xl text-gray-700 dark:text-gray-300 mt-8 font-semibold">What Would You Like to Practice Today?</p>
                     </header>
-                    <main class="flex flex-col gap-5">
-                        <button id="start-new-words-btn" class="w-full bg-blue-600 text-white p-4 rounded-xl shadow-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex items-center gap-4">
+                    <main class="grid grid-cols-3 gap-4">
+                        <button id="start-new-words-btn" class="w-full bg-blue-600 text-white p-8 rounded-xl shadow-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2">
                             <div class="bg-blue-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
                             </div>
-                            <div class="text-left">
+                            <div class="text-center">
                                 <span class="font-bold text-lg">A. New Words</span>
                                 <span class="text-sm font-light block opacity-80">Expand your vocabulary.</span>
                             </div>
                         </button>
-                        <button id="start-complete-phrase-btn" class="w-full bg-teal-600 text-white p-4 rounded-xl shadow-lg hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex items-center gap-4">
+                        <button id="start-complete-phrase-btn" class="w-full bg-teal-600 text-white p-8 rounded-xl shadow-lg hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2">
                              <div class="bg-teal-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path></svg>
                             </div>
-                            <div class="text-left">
+                            <div class="text-center">
                                 <span class="font-bold text-lg">B. Complete the Phrase</span>
                                 <span class="text-sm font-light block opacity-80">Practice grammar and expressions.</span>
                             </div>
                         </button>
-                        <button id="start-phrasal-verbs-btn" class="w-full bg-purple-600 text-white p-4 rounded-xl shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex items-center gap-4">
+                        <button id="start-phrasal-verbs-btn" class="w-full bg-purple-600 text-white p-8 rounded-xl shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2">
                              <div class="bg-purple-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
                             </div>
-                            <div class="text-left">
-                                <span class="font-bold text-lg">D. Complete Phrasal Verbs</span>
+                            <div class="text-center">
+                                <span class="font-bold text-lg">C. Phrasal Verbs</span>
                                 <span class="text-sm font-light block opacity-80">Master verb combinations.</span>
                             </div>
                         </button>
-                        <button id="start-phrasal-verbs-completion-btn" class="w-full bg-rose-600 text-white p-4 rounded-xl shadow-lg hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex items-center gap-4">
+                        <button id="start-phrasal-verbs-completion-btn" class="w-full bg-rose-600 text-white p-8 rounded-xl shadow-lg hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2">
                             <div class="bg-rose-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V4a2 2 0 012-2h6.172a2 2 0 011.414.586l3.414 3.414A2 2 0 0117 8z"></path></svg>
                             </div>
-                            <div class="text-left">
+                            <div class="text-center">
                                 <span class="font-bold text-lg">D. Complete Phrasal Verbs</span>
                                 <span class="text-sm font-light block opacity-80">Test your phrasal verb knowledge.</span>
                             </div>
                         </button>
-                        <button id="start-idioms-btn" class="w-full bg-orange-600 text-white p-4 rounded-xl shadow-lg hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex items-center gap-4">
+                        <button id="start-idioms-btn" class="w-full bg-orange-600 text-white p-8 rounded-xl shadow-lg hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2">
                              <div class="bg-orange-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m1.636 6.364l.707-.707M6 9l2 2 4-4 6 6 2-2"></path></svg>
                             </div>
-                            <div class="text-left">
+                            <div class="text-center">
                                 <span class="font-bold text-lg">E. Idioms</span>
                                 <span class="text-sm font-light block opacity-80">Understand common expressions.</span>
                             </div>
