Cambios UI, botones, 3 columnas

--- a/game.html
+++ b/game.html
@@ -33,7 +33,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">A. New Words</span>
+                                <span class="font-bold text-lg">A. Words</span>
                                 <span class="text-sm font-light block opacity-80">Expand your vocabulary.</span>
                             </div>
                         </button>
@@ -42,7 +42,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">B. Complete the Phrase</span>
+                                <span class="font-bold text-lg">B. Complete</span>
                                 <span class="text-sm font-light block opacity-80">Practice grammar and expressions.</span>
                             </div>
                         </button>
@@ -76,10 +76,10 @@
                     </main>
                 </div>
 
-                <!-- ======================= NEW WORDS SECTION ======================= -->
+                <!-- ======================= WORDS SECTION ======================= -->
                 <div id="new-words-section" class="hidden flex-col h-full">
                     <header class="text-center mb-4">
-                         <h1 class="text-3xl font-bold text-blue-600 dark:text-blue-400">New Words</h1>
+                         <h1 class="text-3xl font-bold text-blue-600 dark:text-blue-400">Words</h1>
                          <p id="word-counter" class="text-sm text-gray-500 dark:text-gray-400 mt-1"></p>
                     </header>
                     
@@ -291,10 +291,10 @@
                     </footer>
                 </div>
 
-                <!-- ======================= COMPLETE THE PHRASE SECTION ======================= -->
+                <!-- ======================= COMPLETE SECTION ======================= -->
                 <div id="complete-phrase-section" class="hidden flex-col h-full">
                     <header class="text-center mb-4">
-                        <h1 class="text-3xl font-bold text-teal-600 dark:text-teal-400">Complete the Phrase</h1>
+                        <h1 class="text-3xl font-bold text-teal-600 dark:text-teal-400">Complete</h1>
                         <div class="flex justify-center gap-4 text-sm text-gray-500 dark:text-gray-400 mt-1">
                             <p id="phrase-counter"></p>
                             <p id="phrase-score-counter"></p>
