--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">B. Complete</span>
+                                <span class="font-bold text-lg"><span class="hidden sm:inline">B. </span>Complete</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Practice grammar and expressions.</span>
                             </div>
                         </button>
@@ -51,7 +51,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">C. Phrasal Verbs</span>
+                                <span class="font-bold text-lg"><span class="hidden sm:inline">C. </span>Phrasal Verbs</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Master verb combinations.</span>
                             </div>
                         </button>
@@ -60,7 +60,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V4a2 2 0 012-2h6.172a2 2 0 011.414.586l3.414 3.414A2 2 0 0117 8z"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">D. Complete Phrasal Verbs</span>
+                                <span class="font-bold text-lg"><span class="hidden sm:inline">D. </span>Complete Phrasal Verbs</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Test your phrasal verb knowledge.</span>
                             </div>
                         </button>
@@ -69,7 +69,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m1.636 6.364l.707-.707M6 9l2 2 4-4 6 6 2-2"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">E. Idioms</span>
+                                <span class="font-bold text-lg"><span class="hidden sm:inline">E. </span>Idioms</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Understand common expressions.</span>
                             </div>
                         </button>
@@ -78,7 +78,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">F. Idioms Challenge</span>
+                                <span class="font-bold text-lg"><span class="hidden sm:inline">F. </span>Idioms Challenge</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Guess the meaning of idioms.</span>
                             </div>
                         </button>
@@ -87,7 +87,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path></svg>
                             </div>
                             <div class="text-center">
-                                <span class="font-bold text-lg">G. Used To</span>
+                                <span class="font-bold text-lg"><span class="hidden sm:inline">G. </span>Used To</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Practice past habits and states.</span>
                             </div>
                         </button>
