--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <div class="bg-blue-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center h-10">
                                 <span class="font-bold text-lg hidden lg:inline">A. </span><span class="font-bold text-lg">Words</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Expand your vocabulary.</span>
                             </div>
@@ -41,7 +41,7 @@
                              <div class="bg-teal-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path></svg>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center h-10">
                                 <span class="font-bold text-lg hidden lg:inline">B. </span>Complete</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Practice grammar and expressions.</span>
                             </div>
@@ -50,7 +50,7 @@
                              <div class="bg-purple-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center h-10">
                                 <span class="font-bold text-lg hidden lg:inline">C. </span>Phrasal Verbs</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Master verb combinations.</span>
                             </div>
@@ -59,8 +59,8 @@
                             <div class="bg-rose-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V4a2 2 0 012-2h6.172a2 2 0 011.414.586l3.414 3.414A2 2 0 0117 8z"></path></svg>
                             </div>
-                            <div class="text-center">
-                                <span class="font-bold text-lg hidden lg:inline">D. </span><span class="font-bold text-lg hidden md:block">Complete Phrasal Verbs</span><span class="font-bold text-lg block md:hidden">Phrasal Verb Completion</span>
+                            <div class="text-center h-10">
+                                <span class="font-bold text-lg hidden lg:inline">D. </span><span class="font-bold text-lg hidden md:block">Complete Phrasal Verbs</span>                                <span class="font-bold text-lg block md:hidden">Verb Completion</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Test your phrasal verb knowledge.</span>
                             </div>
                         </button>
@@ -68,7 +68,7 @@
                              <div class="bg-orange-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m1.636 6.364l.707-.707M6 9l2 2 4-4 6 6 2-2"></path></svg>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center h-10">
                                 <span class="font-bold text-lg hidden lg:inline">E. </span>Idioms</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Understand common expressions.</span>
                             </div>
@@ -77,7 +77,7 @@
                              <div class="bg-yellow-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center h-10">
                                 <span class="font-bold text-lg hidden lg:inline">F. </span>Idioms Challenge</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Guess the meaning of idioms.</span>
                             </div>
@@ -86,7 +86,7 @@
                              <div class="bg-green-500 p-3 rounded-lg">
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path></svg>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center h-10">
                                 <span class="font-bold text-lg hidden lg:inline">G. </span>Used To</span>
                                 <span class="text-sm font-light hidden md:block opacity-80">Practice past habits and states.</span>
                             </div>
