feat: Standardize "Verb Completion" across all screen sizes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V4a2 2 0 012-2h6.172a2 2 0 011.414.586l3.414 3.414A2 2 0 0117 8z"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-semibold text-base hidden lg:inline">D. </span><span class="font-semibold text-base hidden md:block">Complete Phrasal Verbs</span>                                <span class="font-semibold text-base block md:hidden">Verb Completion</span>
+                                <span class="font-semibold text-base hidden lg:inline">D. </span><span class="font-semibold text-base hidden md:block">Verb Completion</span>                                <span class="font-semibold text-base block md:hidden">Verb Completion</span>
                                 <span class="text-xs font-normal hidden md:block opacity-80">Test your phrasal verb knowledge.</span>
                             </div>
                         </button>
