feat: Dynamically populate main menu button texts

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-semibold text-base hidden lg:inline" id="words-btn-prefix"></span><span class="font-semibold text-base" id="words-btn-short"></span>
-                                <span class="text-xs font-normal hidden md:block opacity-80" id="words-btn-long"></span>
+                                <span class="font-semibold text-base lg:inline" id="words-btn-prefix">A. </span><span class="font-semibold text-base" id="words-btn-short">Words</span>
+                                <span class="text-xs font-normal md:block opacity-80" id="words-btn-long">Learn new vocabulary.</span>
                             </div>
                         </button>
                         <button id="start-complete-phrase-btn" class="w-full bg-teal-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -45,8 +45,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-semibold text-base hidden lg:inline" id="complete-btn-prefix"></span><span class="font-semibold text-base" id="complete-btn-short"></span>
-                                <span class="text-xs font-normal hidden md:block opacity-80" id="complete-btn-long"></span>
+                                <span class="font-semibold text-base lg:inline" id="complete-btn-prefix">B. </span><span class="font-semibold text-base" id="complete-btn-short">Complete Phrase</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80" id="complete-btn-long">Fill in the blanks.</span>
                             </div>
                         </button>
                         <button id="start-phrasal-verbs-btn" class="w-full bg-purple-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -496,6 +496,7 @@
     </div>
 
     <script src="game-db.js"></script>
+    <script src="interface.js"></script>
     <script src="game.js?v=1.0.0"></script>
 </body>
 </html>
